0.1.5-2
-------

Using wx.GetDefaultPyEncoding/wx.SetDefaultPyEncoding for changing active encoding.

Fixed pasting siblings (Ctrl key pressed while pasting).

0.1.5-1
-------

Added wxWizard, wxWizardPageSimple (only from pull-down menu). 

Hide command for test window.

Replacing classes works better.

Added Locate tool.

0.1.4-1
-------

Edit->Locate command (Ctrl-L) for quick selection of items.
Works with event-handling controls (buttons, text fields) but
not with labels/sizers.

Some improvements: relative paths for files supplied as command-
line argument work correctly, notebook panels are highlighted 
better.

0.1.2-1
_______

Added support for wxGridBagSizer (supported in wxPython 2.5).

0.1.1-5
-------

Added subclass attribute.

0.1.1-4
-------

Fixed problems with wxStaticBitmap (stock_id attribute, icon type
switching).

Changed some dimensions in properties panel elements.

0.1.1-3
-------

Sizes of some controls were not normal on wxMSW. Fixed.

Some changes to test window code to make it resize better and to 
have focus control with sawfish for all types of windows.

0.1.1-2
-------

Bugs with currentEncoding and frame testing fixed.

Some required parameters are set to default if missing.

Unsupported classes are tolerated, with warning message.

wxScrolledWindow added (to 'control' pulldown menu, not yet to the
tool palette).

Multi-line editing for labels and some values (wxTextCtrl,
wxHtmlWindow).

0.1.1-1
-------

Changed internationalization support. '-i' option removed, default
encoding is used (should be defined in sitecustomize.py, or 'ascii' by
default). When XRC file is opened with encoding specified,
translations are not used.

0.1.1
-----

Replace command added (not quite finished yet).

0.1.0
-----

Finally implemented tools panel for almost all controls (except
wxHtmlWindow, wxCalendarCtrl and wxGenericDirCtrl - they are too
rarely used).

Changed some sizes in panel to better work with different fonts.
